# PetrolEngine

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  EngineArchitecture.drawio  LICENSE  PseudoDoc.md  README.md  Win-GenProjects.bat  premake5.lua
Dependencies/: CMakeLists.txt
Engine/: CodeStyle.txt  premake5.lua  resource.h
Engine/Resources/Models/Devildom girl/: Devildom girl Tpose.fbx  Mizugi_02.png~  d.fbx  girl.fbx
Engine/Resources/Models/Devildom girl/blender/exports/: devilgurl.fbx  devilgurl1.fbx
Engine/Resources/Shaders/: shader.frag  shader.vert  textShader.frag  textShader.vert
Engine/Source/: Aliases.h  Atlas.h  BoolArray.h  Buffers.h  Collider.cpp  Collider.h  Components.cpp  Components.h  Console.cpp  Console.h  DebugTools.cpp  DebugTools.h  DynamicBuffer.cpp  DynamicBuffer.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Maath.cpp  Maath.h  Main.cpp  Math.cpp  Math.h  PCH.h  PrecompiledHeader.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ToDo.txt  Window.cpp  Window.h  modelLoader.cpp  modelLoader.h
Engine/Source/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  Entity.cpp  Entity.h  Material.h  Mesh.cpp  Mesh.h  Movement.cpp  Movement.h  Properties.h  Sprite.cpp  Sprite.h  TestRotationScript.cpp  TestRotationScript.h  TextMesh.h  Transform.cpp  Transform.h  Vertex.cpp  Vertex.h  VertexData.cpp  VertexData.h
Engine/Source/Core/: Application.cpp  Application.h  Event.h  EventStack.cpp  EventStack.h  Files.cpp  Files.h  Image.cpp  Image.h  Logger.cpp  Logger.h  ResourceManager.h  Window.cpp  Window.h  WindowResourceCreator.h  layer.h  layerStack.cpp  layerStack.h
Engine/Source/Core/GLFW/: GLFW.h  GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
Engine/Source/Core/Window/: Window.cpp  Window.h
Engine/Source/Core/WindowInterface/: WindowI.cpp  WindowI.h  WindowResourceCreator.h
Engine/Source/ECS/: ECS.cpp  ECS.h
Engine/Source/Physics/: Physics.cpp  Physics.h
Engine/Source/Renderer/: Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererResourceCreator.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Source/Renderer/Components/: Sprite.h
Engine/Source/Renderer/Metal/: Metal.cpp  Metal.h  MetalContext.cpp  MetalContext.h  MetalFramebuffer.cpp  MetalFramebuffer.h  MetalIndexBuffer.cpp  MetalIndexBuffer.h  MetalRenderer.cpp  MetalRenderer.h  MetalShader.cpp  MetalShader.h  MetalTexture.cpp  MetalTexture.h  MetalUniformBuffer.cpp  MetalUniformBuffer.h  MetalVertexArray.cpp  MetalVertexArray.h  MetalVertexBuffer.cpp  MetalVertexBuffer.h
Engine/Source/Renderer/OpenGL/: OpenGL.cpp  OpenGL.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLCubemap.cpp  OpenGLCubemap.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/Source/Renderer/Renderer/: Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  defaultShaders.h
Engine/Source/Renderer/RendererInterface/: Cubemap.h  Framebuffer.h  FramebufferI.cpp  FramebufferI.h  GraphicsContext.h  GraphicsContextI.cpp  GraphicsContextI.h  IndexBufferI.cpp  IndexBufferI.h  RendererI.cpp  RendererI.h  RendererResourceCreator.h  Shader.h  ShaderI.cpp  ShaderI.h  Texture.cpp  Texture.h  TextureI.cpp  TextureI.h  UniformBuffer.h  VertexArray.h  VertexArrayI.cpp  VertexArrayI.h  VertexBuffer.h  VertexBufferI.cpp  VertexBufferI.h
Engine/Source/Renderer/Vulkan/: Vulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexArray.cpp  VulkanVertexArray.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Engine/Source/Sound/: Sound.cpp  Sound.h
Engine/Source/Utils/: Benchmarker.cpp  Benchmarker.h
